<resources>
    <string name="app_name">MyMoviesDB</string>
    <string name="title_movies">Movies</string>
    <string name="title_favorites">Favorites</string>
    <string name="title">Movie tittle</string>
    <string name="release_data">Release data:</string>
    <string name="vote_avg">Vote average:</string>
    <string name="point_avg">1.0</string>
    <string name="data_text_view">30 nov 2020</string>
</resources>